some fixes, still cors error