@@ -4,10 +4,18 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.logout.ForwardLogoutSuccessHandler;
+import org.springframework.security.web.firewall.HttpFirewall;
+import org.springframework.security.web.firewall.StrictHttpFirewall;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
+
+import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
 
 @Configuration
 public class SecurityFilterChain {
@@ -15,14 +23,22 @@ public class SecurityFilterChain {
     @Bean
     public org.springframework.security.web.SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults()) // replaces .cors().and()
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // replaces .cors().and()
                 .csrf(org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/login", "/signup").permitAll()
+                        .requestMatchers("/login", "/api/auth/login", "/").permitAll()
                         .anyRequest().authenticated()
                 )
                 .formLogin(form -> form
-                        .loginPage("/login")
+//                        .successHandler(new RefererRedirectionAuthenticationSuccessHandler())
+                                .loginProcessingUrl("/api/auth/login")  // Use this as the login URL
+                                //.loginPage("/login")
+                                .defaultSuccessUrl("http://localhost:3000/", true)
+                                .permitAll()
+                )
+                .logout(form -> form
+                        .logoutUrl("/logout")
+                        .logoutSuccessUrl("http://localhost:3000/login")
                         .permitAll()
                 );
         return http.build();
@@ -31,14 +47,23 @@ public class SecurityFilterChain {
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // Set your allowed origins
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST")); // Set your allowed HTTP methods
-        configuration.setAllowedHeaders(Arrays.asList("*")); // Set your allowed headers
-        configuration.setAllowCredentials(true); // Allow credentials if needed
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
+    @Bean
+    public HttpFirewall allowDoubleSlashFirewall() {
+        StrictHttpFirewall firewall = new StrictHttpFirewall();
+        firewall.setAllowUrlEncodedDoubleSlash(true);
+        firewall.setAllowBackSlash(false);
+        firewall.setAllowSemicolon(false);
+        return firewall;
+    }
 }
